--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Ably JSON Patch demo",
   "description": "A simple demo to demonstrate using Ably pub/sub and history to build a JSON Patch service",
   "repository": "https://github.com/ably/demo-json-patch",
-  "logo": "https://files.ably.io/logo-70x70.png",
+  "logo": "https://files.ably.com/logo-70x70.png",
   "keywords": ["Ably", "pub/sub", "JSON patch", "realtime"],
   "success_url": "/heroku-start",
   "addons": [
